--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ section.about {
     inset: 0;
     width: 100%;
     height: 100%;
-    background-color: hsl(212, 33%, 89%);
+    background-color: #bde0fe;
     display: none;
 }
 
